scss/_main.scss
/* Sakura.css v0.6.2
 * ================
 * Minimal css theme.
 * Project: https://github.com/oxalorg/sakura
 */

/* Body */

html {
    font-size: 62.5%; // So that root size becomes 10px
    font-family: serif;
}

body {
    // $font-size-base must be a rem value
    font-size: $font-size-base;
    line-height: 1.618;
    max-width: 38em;
    margin: auto;
    color: $color-text;
    background-color: $color-bg;
    padding: 13px;
}

@media (max-width: 684px) {
    body {
        font-size: $font-size-base * 0.85;
    }
}

@media (max-width: 382px) {
    body {
        font-size: $font-size-base * 0.75;
    }
}

@mixin word-wrap() {
    overflow-wrap: break-word;
    word-wrap: break-word;
    -ms-word-break: break-all;
    word-break: break-word;
    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;
}

h1, h2, h3, h4, h5, h6 {
    line-height: 1.1;
    font-family: Verdana, Geneva, sans-serif;
    font-weight: 700;
    @include word-wrap;
}

h1 { font-size: 2.35em }
h2 { font-size: 2.00em }
h3 { font-size: 1.75em }
h4 { font-size: 1.5em }
h5 { font-size: 1.25em }
h6 { font-size: 1em }

small, sub, sup {
    font-size: 75%;
}

hr {
    border-color: $color-blossom;
}

a {
    text-decoration: none;
    color: $color-blossom;

    &:hover {
        color: $color-fade;
        border-bottom: 2px solid $color-text;
    }

}

ul {
    padding-left: 1.4em;
}

li {
    margin-bottom: 0.4em;
}

blockquote {
    font-style: italic;
    margin-left: 1.5em;
    padding-left: 1em;
    border-left: 3px solid $color-blossom;
}

img {
    max-width: 100%;
}

/* Pre and Code */

pre {
    background-color: $color-bg-alt;
    display: block;
    padding: 1em;
    overflow-x: scroll;
}

code {
    font-size: 0.9em;
    padding: 0 0.5em;
    background-color: $color-bg-alt;
    white-space: pre-wrap;
}

pre > code {
    padding: 0;
    background-color: transparent;
    white-space: pre;
}

/* Tables */

table {
    text-align: justify;
    width: 100%;
    border-collapse: collapse;
}

td, th {
    padding: 0.5em;
    border-bottom: 1px solid $color-bg-alt;
}

/* Buttons, forms and input */

input, textarea {
    border: 1px solid $color-text;

    &:focus {
        border: 1px solid $color-blossom;
    }
}

.button, button, input[type="submit"], input[type="reset"], input[type="button"] {
    display: inline-block;
    padding: 5px 10px;
    text-align: center;
    text-decoration: none;
    white-space: nowrap;

    background-color: $color-blossom;
    color: $color-bg;
    border-radius: 1px;
    border: 1px solid $color-blossom;
    cursor: pointer;
    box-sizing: border-box;

    &[disabled] {
        cursor: default;
        opacity: .5;
    }

    &:focus, &:hover {
        background-color: $color-fade;
        border-color: $color-fade;
        color: $color-bg;
        outline: 0;
    }
}

textarea, select, input[type] {
    color: $color-text;
    padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
    margin-bottom: 10px;
    background-color: $color-bg-alt;
    border: 1px solid $color-bg-alt;
    border-radius: 4px;
    box-shadow: none;
    box-sizing: border-box;

    &:focus {
        border: 1px solid $color-blossom;
        outline: 0;
    }
}

label, legend, fieldset {
    display: block;
    margin-bottom: .5rem;
    font-weight: 600; 
}

